--- a/src/components/Resume.css
+++ b/src/components/Resume.css
@@ -1,55 +1,60 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css');
 
-body {
+#resume body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 12px;
-    max-width: 960px;
-    margin: auto;
+    font-size: 50px;
+    max-width: 500px;
+    margin-top: 80px;
 }
-h1 {
+#resume h1 {
     font-size: 3em;
     letter-spacing: .6em;
     padding-top: 1em;
-    padding-bottom: 1em;
 }
 
-h2 {
+#resume h2 {
     font-size: 1.5em;
     padding-bottom: 1em;
 }
-main {
+#resume main {
     display: grid;
     grid-template-columns: 40% 60%;
     margin-top: 3em;
 }
-header {
+#resume header {
     text-align: center;
     margin: auto 2em;
 }
 
-section {
+#resume section {
+    /* margin: auto 1em 4em 2em; */
     margin: auto 1em 4em 2em;
 }
 
-i {
+#resume i {
     margin-right: .5em;
 }
 
-p {
+#resume p {
     margin: .2em auto
 }
 
-hr {
+#resume hr {
     border: none;
     background-color: lightgray;
     height: 1px;
 }
 
-h1, h2 {
+#resume h1, h2 {
     font-weight: 100;
     margin-bottom: 0;
 }
-#mainLeft {
+#resume #mainLeft {
     border-right: 1px solid lightgray;
+    margin-left: 13em;
+}
+#resume #mainRight {
+    /* border-right: 1px solid lightgray; */
+    margin-right: 13em;
 }
