--- a/src/indexwhisky.css
+++ b/src/indexwhisky.css
@@ -80,7 +80,7 @@ html{
     display: flex;
     flex-direction: column;
     padding:3px 200px;
-    height: 550px;
+    height: 495px;
     justify-content: center;
     align-items: center;
 }
@@ -253,14 +253,16 @@ footer{
   # Footer
   --------------------------------------------------------------*/
   #footer {
-    background: #101522;
+    /* background: #101522; */
+    background: linear-gradient(83deg, #e64583, #410bad);
+    /* background: #eceef3; */
     padding: 0 0 25px 0;
     color: #eee;
     font-size: 14px;
   }
 
   #footer .footer-top {
-    background: #040919;
+    background: linear-gradient(83deg, #f16fa1, #8b55f5);
     padding: 60px 0 30px 0;
   }
 
