--- a/src/components/Apartment.css
+++ b/src/components/Apartment.css
@@ -8,17 +8,57 @@
     width: 100% ;
     margin-bottom:-6px;
 }
-/* background-color:black; */
+.display-container b{
+    font-size: 25px;
+
+}
 /* #myslides{
     z-index:3;
     width:260px;
 } */
 
+
+
+/* #mySlides
+img{ */
+    /* max-width:100%; */
+    /* max-height:100%; */
+    /* min-width: 100%; */
+    /* object-fit: contain; */
+
+    /* transform: perspective(100px) translateZ(0px);
+    transition: transform 100ms linear;
+    width:100%;
+    height: auto; */
+/* } */
+
+    /* abridged css values */
+
+img {
+    transform: perspective(100px) translateZ(0px);
+    transition: transform 100ms linear;
+    width:100%;
+    aspect-ratio: 4 / 3;
+    /* height:100% */
+    /* height: auto; */
+  }
+
+img{border-style:none;}
+img{vertical-align:middle;}
+
+#transZ
+img:hover {
+    transform: perspective(100px) translateZ(5px);
+  }
+
+.display p{
+    font-weight: bold;
+}
 #mySidebar{
     margin-top: 65px;
     width:260px;
     z-index:3;
-    background-image: linear-gradient(83deg, #8b55f5, #f16fa1);
+    background-image: linear-gradient(85deg, #8b55f5, #f16fa1);
 
 }
 .demo.opacity.hover-opacity-off{
@@ -30,6 +70,7 @@
 }
 .container.fa{
     width:30px;
+    border: 0;
 }
 .main.white{
     margin-left: 260px;
@@ -49,8 +90,6 @@ footer,header,nav{display:block;margin:0px;background: linear-gradient(83deg, #f
 a{background-color:transparent;}
 a:active,a:hover{outline-width:0;}
 strong{font-weight:bolder;}
-img{border-style:none;}
-img{vertical-align:middle;}
 
 hr{box-sizing:content-box;height:0;overflow:visible;}
 button,input{font:inherit;margin:0;}
@@ -75,7 +114,7 @@ a{color:inherit;}
 .button:disabled{cursor:not-allowed;opacity:0.3;}
 :disabled *{pointer-events:none;}
 .display-container{position:relative;}
-.input{padding:8px;display:block;border:none;border-bottom:1px solid #ccc;width:100%;}
+.input{margin-bottom:10px;padding:8px;display:block;border:none;border-bottom:1px solid #ccc;width:100%;}
 .sidebar{height:100%;width:200px;background-color:#fff;position:fixed!important;z-index:1;overflow:auto;}
 .main{transition:marginLeft .4s;}
 .modal{z-index:3;display:none;padding-top:100px;position:fixed;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:rgb(0,0,0);background-color:rgba(0,0,0,0.4);}
@@ -85,7 +124,8 @@ a{color:inherit;}
 .bar .button{white-space:normal;}
 .bar-block .bar-item{width:100%;display:block;padding:8px 16px;text-align:left;border:none;white-space:normal;float:none;outline:0;}
 .block{display:block;width:100%;}
-.container:after,.container:before,.row:after,.row:before,.row-padding:after,.row-padding:before,.bar:before,.bar:after{content:"";display:table;clear:both;}
+.container:after,.container:before,.row:after,.row:before,.row-padding:after,.row-padding:before,.bar:before,.bar:after
+{content:"";display:table;clear:both;}
 
 .col,.third{float:left;width:100%;}
 .col.s3{width:24.99999%;}
@@ -94,7 +134,7 @@ a{color:inherit;}
 .third{width:33.33333%;}
 }
 .content{margin-left:auto;margin-right:auto;}
-.content{max-width:980px;}
+.content{max-width:1200px;}
 @media (max-width:600px){
 .modal-content{margin:0 10px;width:auto!important;}
 .modal{padding-top:30px;}
@@ -137,7 +177,8 @@ a{color:inherit;}
 .right{float:right!important;}
 .button:hover{color:#000!important;background-color:#ccc!important;}
 .transparent{background-color:transparent!important;}
-.green{color:#fff!important;background:linear-gradient(83deg, #3fce6a, #b81c30)!important;}
+.green{color:#fff!important;background:linear-gradient(83deg, #3fce6a, #b81c30,#3fce6a)!important;}
+.green:hover{color:#fff!important;background:linear-gradient(83deg, #3fce6a, #630c17,#3fce6a)!important;}
 .white{color:#000!important;background-color:#fff!important;}
 .black{color:rgb(14, 13, 13)!important;}
 .light-grey{color:#000!important;background-color:#f1f1f1!important;}
