--- a/src/indexwhisky.css
+++ b/src/indexwhisky.css
@@ -9,26 +9,16 @@ html{
 :root{
     --navbar-height: 59px;
 }
-#heading1{
-    color:black ;
-    background-color:rgb(23, 133, 148);
-    opacity: 0.8;
-}
-
-#heading2
-{   font-size: 30px;
-    color:rgb(17, 17, 19);
-    background-color:rgb(47, 190, 209);
-    opacity: 0.9;
-}
 
 #navbar{
     display: flex;
     align-items: center;
-
+    position: fixed;
     top: 0px;
 }
+
 #navbar::before{
+    /* margin-top: 50px; */
     content: "";
     background-color: black;
     position: absolute;
@@ -56,6 +46,8 @@ html{
 #navbar ul{
     display: flex;
     font-family: 'Baloo Bhai', cursive;
+    /* top:0; */
+
 }
 
 #navbar ul li{
@@ -75,6 +67,71 @@ html{
     color: black;
     background-color: white;
 }
+
+.active {
+  visibility: visible ;
+  transition: all 4s;
+}
+.hidden {
+  visibility: hidden;
+  transition: all 0.5s;
+  transform: translateY(-100%);
+}
+/* //////////////////////////////////////////////////// */
+
+div #myCircle {
+  background-color: gray;
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  transform: translateX(11px) translateY(20px) translateZ(75px) perspective(200px);
+}
+
+/* skill */
+.box #skill  {
+  background: #fff;
+  margin: 5px;
+  padding: 15px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+              rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  /* gap: 100px 5em; */
+  justify-content: space-around;
+  display: table-cell;
+  vertical-align: middle;
+  /* align-self: center; */
+
+}
+#transZ,
+#shadowbox
+img:hover {
+    transform: perspective(100px) translateZ(5px);
+  }
+.horizontalscroll {
+  margin: 4px, 4px;
+  padding: 4px;
+  background-color: #08c708;
+  width: 300px;
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+}
+.box #shadowbox  {
+  background: #fff;
+  margin: 20px;
+  padding: 15px;
+  width: 200px;
+  height: 200px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+              rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
+  /* gap: 100px 5em; */
+  justify-content: space-around;
+  display: table-cell;
+  vertical-align: middle;
+  /* align-self: center; */
+
+}
+
+/* ////////////////////////////////////////////////////// */
 /* Home Section */
 #home{
     display: flex;
@@ -110,44 +167,161 @@ html{
     font-size: 1.5rem;
     font-family: 'Bree Serif', serif;
 }
+#heading1
+{
+  color:black ;
+  background:linear-gradient(83deg, #e64583, #410bad,#e64583);
+  opacity: 0.8;
+}
+
+#heading2
+{
+  font-size: 40px;
+  color:rgb(180, 212, 129);
+  background-image:linear-gradient(83deg, #e64583, #410bad,#e64583);
+  background-size: 200%;
+  background-position: left;
+  /* opacity: 0.9; */
+}
+#heading2:hover{
+  background-position: right;
+}
+
+/* Utility Classes */
+.h-primary{
+  font-family: 'Bree Serif', serif;
+  font-size: 3.8rem;
+  padding: 12px;
+}
+
+.h-secondary{
+font-family: 'Bree Serif', serif;
+font-size: 2.3rem;
+padding: 12px;
+}
+
+@media only screen and (max-width: 600px){
+.h-primary{
+  font-family: 'Bree Serif', serif;
+  font-size: 1.7rem;
+  padding: 3px;
+}
+}
+
+@media only screen and (max-width: 800px){
+.h-primary{
+  font-family: 'Roboto','Bree Serif', serif;
+  font-size: 1.9rem;
+  padding: 5px;
+}
+
+.h-secondary{
+  font-family: 'Bree Serif', serif;
+  font-size: 2.5rem;
+  padding: 12px;
+}
+}
+
+
+.center{
+  text-align: center;
+}
+
+footer{
+  background: black;
+  color: white;
+  padding: 9px 20px;
+}
+
+
 /* Wines Section */
 #wines{
-    margin: 34px;
+    /* margin: 34px; */
     display: flex;
+    width:100%;
 }
 #wines .box{
+    width:30%;
     border: 2px solid brown;
-    padding: 34px;
-    margin: 2px 55px;
+    padding: 1%;
+    /* padding: auto; */
+    margin: 1% 2%;
     border-radius: 28px;
     background: #f2f2f2;
     margin-bottom: 20px;
+
 }
 
 #wines .box img{
    height: 160px;
    margin: auto;
    display: block;
+
 }
 
 #wines .box p{
+
     font-family: 'Bree Serif', serif;
+    width:100%;
+    height:120px;
+    /* white-space: nowrap; */
+    overflow-x: hidden;
+    text-align:justify;
+    /* overflow: scroll; */
+
+    text-overflow: ellipsis;
 
 }
+@media (min-width: 420px){
+#wines .box
+  {
+    width:100%;
 
+  }
+}
+@media (min-width: 920px){
+
+}
+@media (max-width: 920px){
+
+}
+/* ////////////////// */
+
+@media (min-width:601px){
+}
+
+@media screen and (max-width: 600px){
+  #wines .box p{
+    visibility:hidden;
+
+    /* font-family: 'Bree Serif', serif;
+    width:100%;
+    overflow: hidden;
+    text-overflow: ellipsis; */
+
+}
+}
+@media (max-width:768px){
+}
+@media (min-width:993px){
+}
+@media (max-width:992px){
+
+}
+/* /////////////////////// */
 /* Clients Section */
 #client-section{
     position: relative;
 }
 
 #client-section::before{
- content: "";
- position: absolute;
+  content: "";
+  position: absolute;
 
- width: 100%;
- height: 100%;
- z-index: -1;
- opacity: 0.3;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.3;
 }
 
 #clients{
@@ -184,16 +358,37 @@ html{
 
 }
 .form-group{
-   padding-bottom: 34px;
-   text-align: center;
-   justify-content: center;
+  padding-bottom: 34px;
+  text-align: center;
+  justify-content: center;
 }
 .form-group input{
-    width:500px;
+    width:80%;
     padding: 0px 0px 10px 10px;
     border-radius: 9px;
     font-size: 1.1rem;
 }
+
+/* ////////////////// */
+
+@media (min-width:601px){
+  .form-group input{width:50%;}
+}
+
+@media (max-width:600px){
+  .form-group input{width:50%;}
+}
+@media (max-width:768px){
+  .form-group input{width:50%;}
+}
+@media (min-width:993px){
+  .form-group input{width:33.33333%;}
+}
+@media (max-width:992px){
+  .form-group input{width:40%;}
+
+}
+/* /////////////////////// */
 .form-group input:focus,
 .form-group input:hover{
     border: 3px solid black;
@@ -220,33 +415,19 @@ html{
 }
 .submit-button:hover,
 .submit-button:focus{
-    border: 3px solid gold;
-    color: gold;
-}
-/* Utility Classes */
-.h-primary{
-    font-family: 'Bree Serif', serif;
-    font-size: 3.8rem;
-    padding: 12px;
-}
-.h-secondary{
-    font-family: 'Bree Serif', serif;
-    font-size: 2.3rem;
-    padding: 12px;
+    border: 3px solid rgb(248, 248, 248);
+    color: rgb(189, 186, 186);
 }
 
-
-
-.center{
-    text-align: center;
+button {
+  /* abridged css values */
+  transform: perspective(100px) translateZ(0px);
+  transition: transform 100ms linear;
 }
 
-footer{
-    background: black;
-    color: white;
-    padding: 9px 20px;
+button:hover {
+  transform: perspective(100px) translateZ(5px);
 }
-
 
 
 /*--------------------------------------------------------------
@@ -278,11 +459,14 @@ footer{
     font-family: "Raleway", sans-serif;
     font-weight: 700;
     color: #fff;
+    /* text-decoration-style: wavy; */
   }
 
   #footer .footer-top .footer-info img {
+    all:unset;
     height: 40px;
     margin-bottom: 10px;
+
   }
 
   #footer .footer-top .footer-info p {
