--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -16,7 +16,14 @@ footer{display:block;}
 a{background-color:transparent;}
 a:active,a:hover{outline-width:0;}
 b{font-weight:bolder;}
-img{border-style:none;}
+
+#portImage img{
+    border-style:none;
+    aspect-ratio: 1/1;
+    all:unset;
+}
+img{vertical-align:middle;}
+
 hr{box-sizing:content-box;height:0;overflow:visible;}
 html,body{font-family:Verdana,sans-serif;font-size:15px;line-height:1.5;}
 html{overflow-x:hidden;}
@@ -25,7 +32,6 @@ h5{font-size:18px;}
 h6{font-size:16px;}
 h2,h5,h6{font-family:"Segoe UI",Arial,sans-serif;font-weight:400;margin:10px 0;}
 hr{border:0;border-top:1px solid #eee;margin:20px 0;}
-img{vertical-align:middle;}
 a{color:inherit;}
 :disabled *{pointer-events:none;}
 .tag{background-color:#000;color:#fff;display:inline-block;padding-left:8px;padding-right:8px;text-align:center;}
