--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,149 @@
 .blank{
   color:#1310ac;
 }
+
+
+/**************************************************************
+                login start here
+**************************************************************/
+
+@import url('https://fonts.googleapis.com/css?family=Numans');
+
+/* html,body{ */
+/* background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg'); */
+/* background: #606d7a;
+background-size: cover;
+background-repeat: no-repeat;
+height: 100%;
+font-family: 'Numans', sans-serif;
+} */
+
+.container{
+height: 100%;
+align-content: center;
+}
+
+.col >img{
+  max-width:200px !important;
+  height: auto;
+  transition: all 0.3s ease 0s!important;
+  width: 100%!important;
+
+}
+
+.col >img:hover{
+  transform: scale(1.1)!important;
+}
+.registercard{
+  height: 550px;
+  margin-top: 1%;
+  margin-bottom: 1.5%;
+  width: 500px;
+  background-image:linear-gradient(83deg, #e64583, #310785,#e64583)!important;
+  box-shadow: inset 0 0 20px #070606;
+
+background-size: 200%;
+background-position: left;
+  }
+.registercard:hover{
+  background-position: right;
+  }
+
+.signincard{
+  height: 400px;
+  margin-top:4%;
+  margin-bottom: 5%;
+  width: 500px;
+  background-image:linear-gradient(83deg, #e64583, #410bad,#e64583)!important;
+  background-size: 200%;
+  background-position: left;
+}
+.signincard:hover{
+  background-position: right;
+}
+
+@media (max-width: 420px) {
+  .signincard{
+    /* margin-top: 25%; */
+    width: 100%!important;
+    height: 100%!important;
+  }
+}
+.signincard-header h3{
+  color: white;
+  }
+  @media (max-width: 991px) {
+    .signincard {
+      top: 20px;
+    }
+  }
+
+  @media (max-width: 420px) {
+      .signincard {
+      top: 15%;
+    }
+  }
+
+@media (max-width: 420px) {
+  .registercard{
+    margin-top: 10%;
+    width: 100%!important;
+    height: 100%!important;
+  }
+}
+.social_icon span{
+font-size: 60px;
+margin-right: 10%;
+color: #161614;
+}
+
+.social_icon span:hover{
+color: white;
+cursor: pointer;
+}
+
+
+.social_icon{
+position: absolute;
+right: 10px;
+top: -55px;
+}
+
+/* .input-group-prepend span{
+width: 50px;
+background-color: #FFC312;
+color: black;
+border:0 !important;
+} */
+
+input:focus{
+outline: 0 0 0 0  !important;
+box-shadow: 0 0 0 0 !important;
+
+}
+
+.login_btn{
+color: black;
+background-color: #28c516;
+/* width: 80px; */
+}
+
+.login_btn:hover{
+color: black;
+background-color: rgb(176, 235, 13);
+}
+
+
+.links{
+color: white;
+}
+
+.links a{
+margin-left: 4px;
+}
+
+
+
+/**************************************************************
+                login end here
+**************************************************************/
